fix(testimonials): first card getting cut-off on Firefox and Safari mobile

--- a/assets/section-testimonials.css
+++ b/assets/section-testimonials.css
@@ -35,8 +35,6 @@
   display: flex;
   flex-direction: row;
   gap: 20px;
-  /* flex-wrap: wrap; */
-  justify-content: space-around;
   overflow-x: scroll;
   scrollbar-width: none;
   -webkit-overflow-scrolling: touch;
